# snemo_analysis_modules

./: .gitignore  Makefile  README.html  README.org  index.html  params.json
css/: styles.css
geant4_validation/: Makefile  README.html  README.org
geant4_validation/source/: CMakeLists.txt
hpge_simulation/: Makefile  README.html  README.org
hpge_simulation/source/: CMakeLists.txt  basic_analysis_module.cc  basic_analysis_module.h
snemo_alpha_delayed_studies/: README.org
snemo_alpha_delayed_studies/source/: CMakeLists.txt  snemo_alpha_delayed_studies_module.cc  snemo_alpha_delayed_studies_module.h
snemo_bb0nu_studies/: .gitignore  Makefile  README.html  README.org
snemo_bb0nu_studies/source/: CMakeLists.txt  snemo_bb0nu_halflife_limit_module.cc  snemo_bb0nu_halflife_limit_module.h
snemo_bremsstrahlung_studies/: README.html  README.org
snemo_bremsstrahlung_studies/source/: CMakeLists.txt  snemo_bremsstrahlung_module.cc  snemo_bremsstrahlung_module.h
snemo_control_plot/: .gitignore  Makefile  README.html  README.org  snemo_control_plot_module.h
snemo_control_plot/script/: process.sh  process.zsh
snemo_control_plot/source/: CMakeLists.txt  base_plotter.cc  base_plotter.h  calibrated_data_plotter.cc  calibrated_data_plotter.h  geometry_tools.cc  geometry_tools.h  simulated_data_plotter.cc  simulated_data_plotter.h  singleton.h  snemo_control_plot_module.cc  snemo_control_plot_module.h  topology_data_plotter.cc  topology_data_plotter.h  tracker_clustering_data_plotter.cc  tracker_clustering_data_plotter.h  tracker_trajectory_data_plotter.cc  tracker_trajectory_data_plotter.h
snemo_detector_efficiency/: README.html  README.org
snemo_detector_efficiency/source/: CMakeLists.txt  snemo_detector_efficiency_module.cc  snemo_detector_efficiency_module.h
snemo_foil_vertex_distribution/: README.html  README.org
snemo_foil_vertex_distribution/source/: CMakeLists.txt  snemo_foil_vertex_distribution.cc  snemo_foil_vertex_distribution_module.cc  snemo_foil_vertex_distribution_module.h
snemo_gamma_tracking_studies/: README.org
snemo_gamma_tracking_studies/source/: CMakeLists.txt  snemo_gamma_tracking_studies_module.cc  snemo_gamma_tracking_studies_module.h
snemo_vertex_resolution/: README.html  README.org
snemo_vertex_resolution/source/: CMakeLists.txt  snemo_vertex_resolution_module.cc  snemo_vertex_resolution_module.h
